# csv-to-json

./: README.md  csv-to-json.cabal
app/: Main.hs
samples/: danish_words.csv
src/CsvToJson/: Core.hs  Csv.hs  Split.hs  Substitute.hs
