name:                csv-to-json
version:             0.1.0.0
synopsis:            Simple CSV to JSON converter tool
-- description:
homepage:            https://github.com/ulisses-alves/csv-to-json#readme
license:             BSD3
license-file:        LICENSE
author:              Ulisses Bini de Paiva Alves
maintainer:          ulissesbpalves@gmail.com
copyright:           2017 Ulisses Bini de Paiva Alves
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     CsvToJson.Core
  other-modules:       CsvToJson.Csv, CsvToJson.Split, CsvToJson.Substitute
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable csv-to-json
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , csv-to-json
  default-language:    Haskell2010

test-suite csv-to-json-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , csv-to-json
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ulisses-alves/csv-to-json
